--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-*.class
-*.log
-
 # sbt specific
 .cache
 .history
@@ -15,3 +12,4 @@ project/plugins/project/
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
+.idea/
