--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,11 @@
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
+
+  http.server = {
+    parsing.max-content-length = 2GB
+    http.server.request-timeout = 30 minutes
+    http.server.idle-timeout = 30 minutes
+  }
 }
 
 database = {
