Send updated images to core
 - PRO-1717

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -28,4 +28,12 @@ server = {
   host = ${?HOST}
   port = 8084
   port = ${?PORT}
+  treeHubHost = "treehub-staging.gw.prod01.advancedtelematic.com"
+  treeHubHost = ${?TREEHUB_HOSTNAME}
+}
+
+core = {
+  baseUri = "http://localhost:8080"
+  baseUri = ${?CORE_API_URI}
+  imageApi = "/api/v1/image"
 }
