[PRO-1615] Add authentication check
Bump version of sota-common to use new namespace extraction.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -29,3 +29,25 @@ server = {
   port = 8084
   port = ${?PORT}
 }
+
+auth {
+  protocol = "oauth.accesstoken"
+  protocol = ${?AUTH_PROTOCOL}
+  verification = "local" # three options: none, local, auth-plus
+  verification = ${?AUTH_VERIFICATION}
+  token {
+    secret = "AyM1SysPpbyDfgZld3umj1qzKObwVMkoqQ-EstJQLr_T-1qS0gZH75aKtMN3Yj0iPS4hcgUuTwjAzZr1Z9CAow"
+    secret = ${?JWT_SECRET}
+  }
+}
+
+authplus {
+  api.uri = "http://localhost:9001"
+  api.uri = ${?AUTHPLUS_HOST}
+  client{
+    id = ""
+    id = ${?AUTHPLUS_CLIENT_ID}
+    secret = ""
+    secret = ${?AUTHPLUS_CLIENT_SECRET}
+  }
+}
