[PRO-1824] add mydevice route with other authentication from token

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -38,6 +38,14 @@ core = {
   packagesApi = "/api/v1/packages"
 }
 
+device_registry = {
+  baseUri = "http://localhost:8083"
+  baseUri = ${?DEVICE_REGISTRY_API_URI}
+  devicesUri = "/api/v1/devices"
+  deviceGroupsUri = "/api/v1/device_groups"
+  mydeviceUri = "/api/v1/mydevice"
+}
+
 auth {
   protocol = "oauth.accesstoken"
   protocol = ${?AUTH_PROTOCOL}
