Save blobs to filesystem

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,7 +10,7 @@ akka {
 
 database = {
   driver = "org.mariadb.jdbc.Driver"
-  url = "jdbc:mariadb://localhost:3307/ota_treehub"
+  url = "jdbc:mariadb://localhost:3306/ota_treehub"
   url = ${?DB_URL}
   properties {
     user = "treehub"
@@ -33,6 +33,11 @@ server = {
   treeHubHost = ${?TREEHUB_HOSTNAME}
 }
 
+treehub {
+  localStorePath = "/tmp/treehub"
+  localStorePath = ${?TREEHUB_LOCAL_STORE_PATH}
+}
+
 core = {
   baseUri = "http://localhost:8080"
   baseUri = ${?CORE_API_URI}
@@ -48,7 +53,7 @@ device_registry = {
 }
 
 auth {
-  protocol = "oauth.accesstoken"
+  protocol = "oauth.accesstoken" # or none
   protocol = ${?AUTH_PROTOCOL}
   verification = "local" # three options: none, local, auth-plus
   verification = ${?AUTH_VERIFICATION}
