Get treehub pullUri from vault
 - PRO-2047

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -28,7 +28,7 @@ server = {
   host = ${?HOST}
   port = 8084
   port = ${?PORT}
-  treeHubHost = "https://treehub-staging.gw.prod01.advancedtelematic.com/api/v2/mydevice"
+  treeHubHost = ""
   treeHubHost = ${?TREEHUB_HOSTNAME}
 }
 
