--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,9 +2,9 @@ akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
 
   http.server = {
-    parsing.max-content-length = 2GB
-    http.server.request-timeout = 30 minutes
-    http.server.idle-timeout = 30 minutes
+    parsing.max-content-length = 3GB
+    request-timeout = 30 minutes
+    idle-timeout = 30 minutes
   }
 }
 
