use console metrics

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -29,7 +29,7 @@ server = {
   host = ${?HOST}
   port = 8084
   port = ${?PORT}
-  treeHubHost = ""
+  treeHubHost = "http://localhost"
   treeHubHost = ${?TREEHUB_HOSTNAME}
 }
 
