For each object uploaded, publish a new kafka message with current usage
Usage is calculated in the background

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -73,3 +73,14 @@ authplus {
     secret = ${?AUTHPLUS_CLIENT_SECRET}
   }
 }
+
+messaging {
+  kafka {
+    groupIdPrefix = "auditor"
+    groupIdPrefix = ${?KAFKA_GROUP_ID}
+    topicSuffix = "dev"
+    topicSuffix = ${?KAFKA_TOPIC_SUFFIX}
+    host = "localhost:9092"
+    host = ${?KAFKA_HOST}
+  }
+}
