fix kafka group id

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -76,7 +76,7 @@ authplus {
 
 messaging {
   kafka {
-    groupIdPrefix = "auditor"
+    groupIdPrefix = "treehub"
     groupIdPrefix = ${?KAFKA_GROUP_ID}
     topicSuffix = "dev"
     topicSuffix = ${?KAFKA_TOPIC_SUFFIX}
