use BIND_HOST instead of HOST_

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -26,9 +26,9 @@ database = {
 
 server = {
   host = "0.0.0.0"
-  host = ${?HOST}
+  host = ${?BIND_HOST}
   port = 8084
-  port = ${?PORT}
+  port = ${?BIND_PORT}
   treeHubHost = "http://localhost"
   treeHubHost = ${?TREEHUB_HOSTNAME}
 }
