use custom dispatcher for usage-router

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,6 +6,21 @@ akka {
     request-timeout = 30 minutes
     idle-timeout = 30 minutes
   }
+
+  actor.deployment {
+    "/usage-router/*" {
+      dispatcher = blocking-io-dispatcher
+    }
+  }
+}
+
+blocking-io-dispatcher {
+  type = Dispatcher
+  executor = "thread-pool-executor"
+  thread-pool-executor {
+    fixed-pool-size = 32
+  }
+  throughput = 1
 }
 
 database = {
