Log metrics for disk writes in local storage
Increase db pool

Add env vars for db configuration

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -33,7 +33,10 @@ database = {
     password = "treehub"
     password = ${?DB_PASSWORD}
   }
-  numThreads = 10
+  numThreads = 20
+  numThreads = ${?DB_NUM_THREADS}
+  queueSize = 1000
+  queueSize = ${?DB_QUEUE_SIZE}
   migrate = false
   migrate = ${?DB_MIGRATE}
   registerMbeans = true
