Implement s3 blob store.
Do not check if storage needs to be updated. This is obsolete since
all sizes are updated when uploading to s3.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -54,6 +54,17 @@ server = {
 treehub {
   localStorePath = "/tmp/treehub"
   localStorePath = ${?TREEHUB_LOCAL_STORE_PATH}
+
+  s3 = {
+    accessKey = ${?TREEHUB_AWS_ACCESS_KEY}
+    secretKey = ${?TREEHUB_AWS_SECRET_KEY}
+    bucketId = ${?TREEHUB_AWS_BUCKET_ID}
+    region = "eu-central-1"
+    region = ${?TREEHUB_AWS_REGION}
+  }
+
+  storage = "local" // or s3
+  storage = ${?TREEHUB_STORAGE}
 }
 
 core = {
