[PRO-2703] Standardise env var names

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -47,8 +47,8 @@ server = {
   host = ${?BIND_HOST}
   port = 8084
   port = ${?BIND_PORT}
-  treeHubHost = "http://localhost"
-  treeHubHost = ${?TREEHUB_HOSTNAME}
+  treehubUri = "http://"${server.host}":"${server.port}
+  treehubUri = ${?TREEHUB_HOSTNAME}
 }
 
 treehub {
@@ -68,18 +68,24 @@ treehub {
 }
 
 core = {
-  baseUri = "http://localhost:8080"
-  baseUri = ${?CORE_API_URI}
-  packagesApi = "/api/v1/packages"
+  host = "localhost"
+  host = ${?SOTA_CORE_HOST}
+  port = 8080
+  port = ${?SOTA_CORE_PORT}
+  baseUri = "http://"${core.host}":"${core.port}
+  packagesApi = ${core.baseUri}"/api/v1/packages"
 }
 
 device_registry = {
-  baseUri = "http://localhost:8083"
-  baseUri = ${?DEVICE_REGISTRY_API_URI}
-  devicesUri = "/api/v1/devices"
-  deviceGroupsUri = "/api/v1/device_groups"
-  mydeviceUri = "/api/v1/mydevice"
-  packagesUri = "/api/v1/packages"
+  host = "localhost"
+  host = ${?DEVICE_REGISTRY_HOST}
+  port = 8083
+  port = ${?DEVICE_REGISTRY_PORT}
+  baseUri = "http://"${device_registry.host}":"${device_registry.port}
+  devicesUri = ${device_registry.baseUri}"/api/v1/devices"
+  deviceGroupsUri = ${device_registry.baseUri}"/api/v1/device_groups"
+  mydeviceUri = ${device_registry.baseUri}"/api/v1/mydevice"
+  packagesUri = ${device_registry.baseUri}"/api/v1/device_packages"
 }
 
 auth {
@@ -94,8 +100,13 @@ auth {
 }
 
 authplus {
-  api.uri = "http://localhost:9001"
-  api.uri = ${?AUTHPLUS_HOST}
+  api.host = "localhost"
+  api.host = ${?AUTH_PLUS_HOST}
+  api.port = 9001
+  api.port = ${?AUTH_PLUS_PORT}
+  api.scheme = "http"
+  api.scheme = ${?AUTH_PLUS_SCHEME}
+  api.uri = ${authplus.api.scheme}"://"${authplus.api.host}":"${authplus.api.port}
   client{
     id = ""
     id = ${?AUTHPLUS_CLIENT_ID}
