Server static delta files and summary from s3

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -59,11 +59,12 @@ treehub {
     accessKey = ${?TREEHUB_AWS_ACCESS_KEY}
     secretKey = ${?TREEHUB_AWS_SECRET_KEY}
     bucketId = ${?TREEHUB_AWS_BUCKET_ID}
+    deltasBucketId = ${?DELTAS_AWS_BUCKET_ID}
     region = "eu-central-1"
     region = ${?TREEHUB_AWS_REGION}
   }
 
-  storage = "local" // or s3
+  storage = "s3" // or local
   storage = ${?TREEHUB_STORAGE}
 }
 
