add metrics conf

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -126,3 +126,14 @@ messaging {
     host = ${?KAFKA_HOST}
   }
 }
+
+ats {
+  metricsReporter {
+    reportMetrics = true
+    reportMetrics = ${?REPORT_METRICS}
+    serviceName=treehub
+    serviceName=${?SERVICE_NAME}
+    instanceId=${ats.metricsReporter.serviceName}
+    instanceId=${?MESOS_TASK_ID}
+  }
+}
