Add config parameter to allow redirects to S3
Resolves: PRO-4200

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -62,6 +62,8 @@ treehub {
     deltasBucketId = ${?DELTAS_AWS_BUCKET_ID}
     region = "eu-central-1"
     region = ${?TREEHUB_AWS_REGION}
+    allowRedirects = false
+    allowRedirects = ${?TREEHUB_REDIRECT_DOWNLOADS}
   }
 
   storage = "s3" // or local
