add max connection env variable

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,6 +5,8 @@ akka {
     parsing.max-content-length = 3GB
     request-timeout = 30 minutes
     idle-timeout = 30 minutes
+    max-connections = 1024
+    max-connections = ${?AKKA_HTTP_MAX_CONNECTIONS}
   }
 
   actor.deployment {
