Changes to allow 2 new modes for ostree object upload
adds two new modes of operation on the `POST /objects/:object-id`
endpoint, while leaving the current api untouched: Stream Upload and
Out of Band Upload.

Signed-off-by: Simão Mata <simao.mata@here.com>

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -54,22 +54,29 @@ server = {
 }
 
 treehub {
-  localStorePath = "/tmp/treehub"
-  localStorePath = ${?TREEHUB_LOCAL_STORE_PATH}
+  storage {
+    type = "s3" // or local
+    type = ${?TREEHUB_STORAGE}
 
-  s3 = {
-    accessKey = ${?TREEHUB_AWS_ACCESS_KEY}
-    secretKey = ${?TREEHUB_AWS_SECRET_KEY}
-    bucketId = ${?TREEHUB_AWS_BUCKET_ID}
-    deltasBucketId = ${?DELTAS_AWS_BUCKET_ID}
-    region = "eu-central-1"
-    region = ${?TREEHUB_AWS_REGION}
-    allowRedirects = false
-    allowRedirects = ${?TREEHUB_REDIRECT_DOWNLOADS}
+    staleObjectsExpireAfter = 1 hour
+    staleObjectsExpireAfter = ${?TREEHUB_STALE_OBJECTS_EXPIRE_AFTER}
+
+    local = {
+      path = "/tmp/treehub"
+      path = ${?TREEHUB_LOCAL_STORE_PATH}
+    }
+
+    s3 = {
+      accessKey = ${?TREEHUB_AWS_ACCESS_KEY}
+      secretKey = ${?TREEHUB_AWS_SECRET_KEY}
+      bucketId = ${?TREEHUB_AWS_BUCKET_ID}
+      deltasBucketId = ${?DELTAS_AWS_BUCKET_ID}
+      region = "eu-central-1"
+      region = ${?TREEHUB_AWS_REGION}
+      allowRedirects = false
+      allowRedirects = ${?TREEHUB_REDIRECT_DOWNLOADS}
+    }
   }
-
-  storage = "s3" // or local
-  storage = ${?TREEHUB_STORAGE}
 }
 
 core = {
