Decrease akka max request limits.
Make limits configurable with env vars.

Signed-off-by: Simão Mata <simao.mata@here.com>

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,8 +3,11 @@ akka {
 
   http.server = {
     parsing.max-content-length = 3GB
-    request-timeout = 30 minutes
-    idle-timeout = 30 minutes
+    parsing.max-content-length = ${?AKKA_HTTP_MAX_CONTENT_LENGTH}
+    request-timeout = 5 minutes
+    request-timeout = ${?AKKA_HTTP_REQUEST_TIMEOUT}
+    idle-timeout = 5 minutes
+    idle-timeout = ${?AKKA_HTTP_IDLE_TIMEOUT}
     max-connections = 1024
     max-connections = ${?AKKA_HTTP_MAX_CONNECTIONS}
   }
