--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -78,6 +78,7 @@ treehub {
       region = ${?TREEHUB_AWS_REGION}
       allowRedirects = false
       allowRedirects = ${?TREEHUB_REDIRECT_DOWNLOADS}
+      endpointUrl = ""
       endpointUrl = ${?TREEHUB_S3_ENDPOINTURL}
     }
   }
