--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,9 +2,8 @@ stages:
   - test
   - build image
   - trigger deploy
-  - veracode scan
-  - deps scan
-  - generate pages
+  - static scans
+  - publish pages
 
 variables:
   MYSQL_ROOT_PASSWORD: "root"
@@ -32,11 +31,19 @@ test:
     - mysqladmin ping --protocol=TCP -h db -P 3306 -u root -proot
     - mysql -v -h db -u root -proot < db_user.sql
   script:
-    - sbt -sbt-dir ./.sbt -ivy ./.ivy2 -J-Xmx1G -J-XX:MaxPermSize=256m -J-XX:ReservedCodeCacheSize=128m clean coverage ut:test coverageReport sonarScan
+    - sbt -sbt-dir ./.sbt -ivy ./.ivy2 -J-Xmx1G -J-XX:MaxPermSize=256m -J-XX:ReservedCodeCacheSize=128m clean coverage ut:test
+  artifacts:
+    paths:
+      - "target/scala-*/scoverage-data"
+      - "target/scala-*/src_managed"
   cache:
     paths:
       - .ivy2/
       - .sbt
+
+code coverage:
+  extends: .report_scala_coverage
+  image: advancedtelematic/gitlab-jobs:0.2.3
 
 build docker image:
   stage: build image
@@ -87,46 +94,8 @@ trigger sit deploy:
     project: OLP/EDGE/OTA/infra/deployment-descriptors
     branch: master
 
-veracode scan:
-  # prepare and submit for static code analysis
-  stage: veracode scan
-  only:
-    refs:
-      - schedules
-    variables:
-      - $VERACODE_API_ID
-  image: advancedtelematic/veracode:0.1.3
-  before_script:
-    - sbt package
-  script:
-    - run-veracode.sh
-  artifacts:
-    paths:
-      - /tmp/package.zip
 
-deps scan:
-  # perform dependencies CVE analysis
-  stage: deps scan
-  only:
-    - schedules
-  image: advancedtelematic/gitlab-jobs:0.2.3
-  script:
-    - sbt dependencyCheckAggregate
-    - mv target/scala-*/dependency-check-report.html ./depchk.html
-  artifacts:
-    paths:
-      - depchk.html
-
-pages:
-  stage: generate pages
-  only:
-    - schedules
-  dependencies:
-    - deps scan
-  script:
-    - mkdir -p public
-    - mv depchk.html public/index.html
-  artifacts:
-    paths:
-      - public
-    expire_in: 64 days
+include:
+  - project: olp/edge/ota/infra/security
+    ref: v0.0.5
+    file: /shared.yaml
