Pass commit message to deployment-descriptors.
If there is a Jira ticket in the commit message, e.g. OTA-123,
the deployment-descriptors deployments will parse the ticket
and add a comment with the link to the pipeline.

Note that for that to work, the ticket needs to be in the merge-
commit message. Gitlab sometimes does that automatically if the
ticket is mentioned in the commits that are part of the MR, but
sometimes it won't. You might have to add the ticket manually to
the merge-commit message, or you can also consider using the
"Include merge request description" checkbox in the Gitlab MR view.

Signed-off-by: Ignacio Lucero <ignacio.lucero@here.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,6 +75,7 @@ trigger dev deploy:
     NEW_TAG: $CI_COMMIT_SHA
     SERVICE: treehub
     CREATE_COMMIT: "true"
+    UPSTREAM_COMMIT_MESSAGE: $CI_COMMIT_MESSAGE
   trigger:
     project: OLP/EDGE/OTA/infra/deployment-descriptors
     branch: master
@@ -90,6 +91,7 @@ trigger sit deploy:
     NEW_TAG: $CI_COMMIT_SHA
     SERVICE: treehub
     CREATE_COMMIT: "true"
+    UPSTREAM_COMMIT_MESSAGE: $CI_COMMIT_MESSAGE
   trigger:
     project: OLP/EDGE/OTA/infra/deployment-descriptors
     branch: master
