Allow coverage job to fail
There's been sporadic failures of coverage job. Let's not fail entire pipeline
over it while we investagate what's the reason behind it.

Signed-off-by: Max <max.suraev@here.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,6 +43,7 @@ test:
 
 code coverage:
   extends: .report_scala_coverage
+  allow_failure: true
   image: advancedtelematic/gitlab-jobs:0.2.3
 
 build docker image:
