Activate gitlab's built-in license checker
Signed-off-by: Max <max.suraev@here.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -101,6 +101,7 @@ trigger sit deploy:
 
 
 include:
+  - template: License-Scanning.gitlab-ci.yml
   - project: olp/edge/ota/infra/security
     ref: v0.0.7
     file: /shared.yaml
