--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ variables:
   MYSQL_PASSWORD: "treehub"
   VAULT_ADDR: "http://vault.sit-ota.aws.in.here.com"
   # The same image have to be used by test and code coverage jobs:
-  TEST_IMAGE: advancedtelematic/gitlab-jobs:0.2.4
+  TEST_IMAGE: advancedtelematic/gitlab-jobs:0.2.5
 
 default:
   services:
@@ -68,7 +68,7 @@ build docker image:
     - when: on_success
   tags:
     - docker-sock
-  image: advancedtelematic/gitlab-jobs:0.2.4
+  image: advancedtelematic/gitlab-jobs:0.2.5
   script:
     - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - sbt -x -sbt-dir ./.sbt -ivy ./.ivy2 -batch docker:publish -J-Xmx1G -J-XX:ReservedCodeCacheSize=128m -Dsbt.log.noformat=true
@@ -108,7 +108,7 @@ trigger dev deploy:
   variables:
     ENV: "dev"
     NEW_TAG: $CI_COMMIT_SHA
-    SERVICE: treehub
+    SERVICE: $CI_PROJECT_NAME
     CREATE_COMMIT: "true"
     UPSTREAM_COMMIT_MESSAGE: $CI_COMMIT_MESSAGE
   trigger:
@@ -124,7 +124,7 @@ trigger sit deploy:
   variables:
     ENV: "sit"
     NEW_TAG: $CI_COMMIT_SHA
-    SERVICE: treehub
+    SERVICE: $CI_PROJECT_NAME
     CREATE_COMMIT: "true"
     UPSTREAM_COMMIT_MESSAGE: $CI_COMMIT_MESSAGE
   trigger:
@@ -138,5 +138,5 @@ include:
   - template: Secret-Detection.gitlab-ci.yml
   - template: License-Scanning.gitlab-ci.yml
   - project: olp/edge/ota/infra/security
-    ref: v0.0.8
+    ref: v0.0.9
     file: /shared.yaml
