OTA-5700: Redirect to new sonar server

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ variables:
   # VAULT_ADDR: defined in GitLab variables
   # The same image have to be used by test and code coverage jobs:
   TEST_IMAGE: advancedtelematic/gitlab-jobs:0.2.5
+  TEST_IMAGE_SONAR: advancedtelematic/gitlab-jobs-sonar:0.0.3
 
 default:
   services:
@@ -38,6 +39,7 @@ test:
     paths:
       - "target/scala-*/scoverage-data"
       - "target/scala-*/src_managed"
+      - "target/scala-*/classes"
   cache:
     paths:
       - .ivy2/
@@ -46,7 +48,7 @@ test:
 code coverage:
   extends: .report_scala_coverage
   allow_failure: true
-  image: $TEST_IMAGE
+  image: $TEST_IMAGE_SONAR
 
 export docker credentials:
   extends: .export_docker_credentials
@@ -139,5 +141,5 @@ include:
     file: "ITT-Secret-Detection.gitlab-ci.yml"
   - template: License-Scanning.gitlab-ci.yml
   - project: olp/edge/ota/infra/security
-    ref: v0.0.9
+    ref: v0.1.0
     file: /shared.yaml
