OTA-5791 Turn off transparent head requests

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,6 +10,7 @@ akka {
     idle-timeout = ${?AKKA_HTTP_IDLE_TIMEOUT}
     max-connections = 1024
     max-connections = ${?AKKA_HTTP_MAX_CONNECTIONS}
+    transparent-head-requests = off
   }
 
   actor.deployment {
