--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -104,6 +104,7 @@ container_scanning:
   variables:
     CI_APPLICATION_REPOSITORY: registry.hub.docker.com/advancedtelematic/treehub
     DOCKERFILE_PATH: target/docker/stage/Dockerfile
+    SECURE_LOG_LEVEL: debug
   dependencies:
     - export docker credentials
     - build docker image
