--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -102,9 +102,9 @@ container_scanning:
       when: never
     - when: on_success
   variables:
-    GIT_STRATEGY: fetch
+    CS_ANALYZER_IMAGE: registry.gitlab.com/security-products/container-scanning/grype:4
     CI_APPLICATION_REPOSITORY: registry.hub.docker.com/advancedtelematic/treehub
-    # DOCKERFILE_PATH: target/docker/stage/Dockerfile
+    DOCKERFILE_PATH: target/docker/stage/Dockerfile
     SECURE_LOG_LEVEL: debug
   dependencies:
     - export docker credentials
