--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -102,13 +102,12 @@ container_scanning:
       when: never
     - when: on_success
   variables:
-    # CS_ANALYZER_IMAGE: registry.gitlab.com/security-products/container-scanning/grype:4
-    CI_APPLICATION_REPOSITORY: registry.hub.docker.com/advancedtelematic/treehub:latest
+    CI_APPLICATION_REPOSITORY: registry.hub.docker.com/advancedtelematic/treehub
     DOCKERFILE_PATH: target/docker/stage/Dockerfile
     SECURE_LOG_LEVEL: debug
   dependencies:
     - export docker credentials
-    # - build docker image
+    - build docker image
 
 trigger dev deploy:
   stage: trigger deploy
@@ -146,7 +145,7 @@ trigger sit deploy:
 
 
 include:
-  - template: Security/SAST.gitlab-ci.yml
+  - template: SAST.gitlab-ci.yml
   - template: Security/Container-Scanning.gitlab-ci.yml
   - project: "poit/spc/be/prodsec-secret-detection"
     file: "ITT-Secret-Detection.gitlab-ci.yml"
