--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -102,8 +102,10 @@ container_scanning:
       when: never
     - when: on_success
   variables:
-    CI_APPLICATION_REPOSITORY: registry.hub.docker.com/advancedtelematic/treehub
-    DOCKERFILE_PATH: /target/docker/stage/Dockerfile
+    GIT_STRATEGY: fetch
+    CI_APPLICATION_REPOSITORY: hcr.data.here.com/ota_saas/treehub
+    CI_APPLICATION_TAG: ${CI_COMMIT_SHA}
+    #DOCKERFILE_PATH: /target/docker/stage/Dockerfile
     SECURE_LOG_LEVEL: debug
   dependencies:
     - export docker credentials
