OTA-5764: container scanning job fixes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -106,11 +106,9 @@ container_scanning:
     CS_SEVERITY_THRESHOLD: High
     CI_APPLICATION_REPOSITORY: hcr.data.here.com/ota_saas/treehub
     DOCKERFILE_PATH: target/docker/stage/Dockerfile
-    DOCKER_USER: $CI_REGISTRY_USER
-    DOCKER_PASSWORD: $CI_REGISTRY_PASSWORD
-  dependencies:
-    - export docker credentials
-    - build docker image
+    DOCKER_USER: $HCR_REGISTRY_USER
+    DOCKER_PASSWORD: $HCR_REGISTRY_PASSWORD
+
 
 trigger dev deploy:
   stage: trigger deploy
